[package]
name = "axprocess"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axio = "0.1"
riscv = "0.12"
axerrno = "0.1"
bitflags = "2.0"
xmas-elf = "0.9.0"
elf_parser = { git = "https://github.com/Starry-OS/elf_parser.git" }
axfs = { workspace = true }
axmem = { workspace = true }
axlog = { workspace = true }
axsync = { workspace = true }
axtask = { workspace = true }
axhal ={ workspace = true, features = ["paging"] }